contact以外は一旦マークアップ終了

--- a/dev/src/ejs/_include/footer.ejs
+++ b/dev/src/ejs/_include/footer.ejs
@@ -1,3 +1,7 @@
+<div class="scrollTop">
+    <i class="scrollTop__line"></i>
+    <span class="scrollTop__text">SCROLL TOP</span>
+</div>
 <footer class="siteFooter">
     <div class="wrap">
         <div class="siteFooter__nav">
