--- a/dev/src/scss/_settings.scss
+++ b/dev/src/scss/_settings.scss
@@ -29,7 +29,7 @@ html{
 }
 
 body{
-	margin-top: 0;
+	padding-top: 100px;
 	margin-right: auto;
 	margin-bottom: 0;
 	margin-left: auto;
@@ -80,6 +80,10 @@ input , textarea, select{
 		border: none;
 	}
 	
+}
+
+main{
+	display: block;
 }
 
 
