--- a/dev/src/scss/_style-top.scss
+++ b/dev/src/scss/_style-top.scss
@@ -18,6 +18,12 @@
 
 ////////////////////////////////////////
 
+.section{
+    &__index{
+        
+    }
+}
+
 
 ///////////////////////////////////////
 
@@ -59,5 +65,8 @@
         }
     }
 }
+
+
+
 
 }
