--- a/dev/src/ejs/_include/header.ejs
+++ b/dev/src/ejs/_include/header.ejs
@@ -6,6 +6,9 @@
 		<nav class="siteHeader__nav">
 			<%- include( 'nav.ejs' ); %>
 		</nav>
+		<div class="navToggle">
+			<i></i>
+		</div>
 	</div>
 </header>
 
