--- a/dev/src/scss/_colors.scss
+++ b/dev/src/scss/_colors.scss
@@ -19,7 +19,7 @@ $gray_lighten: #f2f3f4;
 
 ////////// project setting
 $basefontColor:#222222;
-$link: #a90000;
+$link: #222222;
 
 
 // $maincolor: 
