--- a/dev/src/scss/_settings.scss
+++ b/dev/src/scss/_settings.scss
@@ -26,6 +26,10 @@ html{
 	-webkit-font-smoothing: antialiased;
 	 -webkit-text-size-adjust: 100%;
 	color: $basefontColor;
+
+	@include mq( tab ){
+		line-height: ( 44 / 26);
+	}	
 }
 
 body{
@@ -35,6 +39,11 @@ body{
 	margin-left: auto;
 	font-size: 1.5em;
 	letter-spacing: 0.04em;
+
+	@include mq( tab ){
+		padding-top: 60px;
+		font-size: 1.3rem;
+	}
 }
 
 h1 , h2 , h3 , h4 , h5 , h6{
