--- a/dev/src/scss/_components.scss
+++ b/dev/src/scss/_components.scss
@@ -13,53 +13,102 @@
 
 ////////////////////
 
-  .button{
-        width: 245px;
-        display: inline-block;
+.button{
+    width: 245px;
+    display: inline-block;
+    position: relative;
+
+    @include mq( sp ){
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: 50px;
+    }   
+
+    button{
+        background: none;
+        font-size: 1em;
+    }
+    
+    a,
+    button{
+        width: 100%;
+        box-sizing: border-box;
+        padding: 10px 20px;
         position: relative;
+        display: block;
+        border: 1px solid;
+        text-align: center;
 
-        @include mq( sp ){
-            margin-right: auto;
-            margin-left: auto;
-            margin-top: 50px;
-        }   
-
-        button{
-            background: none;
-            font-size: 1em;
+        &:before,
+        &:after{
+            content:" "; 
+            height: 1px;
+            margin-top: auto;
+            margin-bottom: auto;
+            position: absolute;
+            top: 0;
+            right: 10px;
+            bottom: 0;
+            background-color: currentColor;
+            transition: transition();
         }
-        
-        a,
-        button{
-            width: 100%;
-            box-sizing: border-box;
-            padding: 10px 20px;
-            position: relative;
-            display: block;
-            border: 1px solid;
-            text-align: center;
 
-            &:before,
-            &:after{
-                content:" "; 
-                height: 1px;
-                margin-top: auto;
-                margin-bottom: auto;
-                position: absolute;
-                top: 0;
-                right: 10px;
-                bottom: 0;
-                background-color: currentColor;
-                transition: transition();
-            }
-
-            &:before{
-                width: 25px;
-            }
-            &:after{
-                width: 10px;
-                transform-origin: right center;
-                transform: rotate( 30deg );
-            }
+        &:before{
+            width: 25px;
+        }
+        &:after{
+            width: 10px;
+            transform-origin: right center;
+            transform: rotate( 30deg );
         }
     }
+}
+
+
+////////////////////
+
+// mask efffect
+
+////////////////////
+
+.js-effect {
+    .mask{
+        display: inline-block;
+        overflow: hidden;
+        position: relative;
+        &:before{
+            content: " ";
+            width: 0%;
+            height: 100%;
+            display: block;
+            position: absolute;
+            z-index: 2;
+            left: 0;
+            transition: transition();
+            transition-delay: 0.15s;
+            background-color: $red;
+        }
+        &__element{
+            white-space: nowrap;
+            display: inline-block;
+            transform: translateX( -100% );
+            transition: transition(all, 0.5s);
+            transition-delay: 0.235s;
+        }
+    }
+}
+.-on{
+    .mask{
+        &:before{
+            content: " ";
+            left: auto;
+            right: 0;
+            animation: maskmove 1s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.15s 1 normal;
+        }
+        &__element{
+            white-space: normal;
+            display: inherit;
+            transform: translateX( 0% );
+        }            
+    }
+}
