--- a/dev/src/scss/_modules.scss
+++ b/dev/src/scss/_modules.scss
@@ -27,15 +27,16 @@ body{
 	top: 0;
 	right: 0;
 	left: 0;
-	transition: transition();
-	
-	
-	
-	@include mq( tab,min ){
-		@at-root .-isScrolled .siteHeader{
-			background-color: #ffffff;
-		}
+	background-color: #ffffff;
+	transition: transition( );
+	transition-delay: 1s;
+	transform: translateY( -100% );
+
+	@at-root .-is-loadend .siteHeader{
+		transform: translateY( 0% );
 	}
+	
+
 	@include mq( tab ){
 
 		//nav-background-color
@@ -235,7 +236,7 @@ body{
 			top: 0;
 			right: 0;
 			bottom: 0;
-			left: 0;
+			// left: 0;
 
 			@at-root .-is-navOpen .navToggle i{
 				&,&:after{
@@ -449,4 +450,97 @@ body{
 	}
 }
 
+
+.loadingAnim{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 20;
+	color: #ffffff;
+	transition: transition( all, 0.45s);
+	transition-delay: 2s;
+	background-color: $red;
+
+	&:before{
+		content: " ";
+		width: 0%;
+		height: 100%;
+		position: fixed;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;		
+		display: block;
+		transition: transition( all, 0.5s );
+		transition-delay: 1.5s;
+		background-color: #ffffff;
+	}
+	@at-root .-is-loaded .loadingAnim{
+		transform: translateX(100%);
+	} 
+	@at-root .-is-loaded .loadingAnim:before{
+		width: 100%;
+	} 	
+
+
+	&__copy{
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;	
+		font-size: $fontsize_xl;
+		
+		@include mq( tab ){
+			font-size: $fontsize_m_sp;
+		}		
+	}
+
+
+	.mask{
+		overflow: hidden;
+		display: inline-block;
+		position: relative;
+
+       &:before{
+            content: " ";
+            width: 0%;
+            height: 100%;
+            display: block;
+            position: absolute;
+            z-index: 2;
+            left: 0;
+            transition: transition();
+            transition-delay: 0.15s;
+            background-color:#fff;
+        }
+        &__element{
+            white-space: nowrap;
+            display: inline-block;
+            transform: translateX( -100% );
+            transition: transition(all, 0.45s);
+            transition-delay: 0.235s;
+        }
+	}
+	@at-root .-is-ready .loadingAnim .mask{
+		&:before{
+            left: auto;
+            right: 0;
+            animation: maskmove 1s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.15s 1 normal;
+		}
+        &__element{
+            display: inherit;
+            transform: translateX( 0% );
+        } 		
+	}	
+
+}
 
