--- a/dev/src/scss/_modules.scss
+++ b/dev/src/scss/_modules.scss
@@ -28,7 +28,7 @@ body{
 	right: 0;
 	left: 0;
 	background-color: #ffffff;
-	transition: transition( );
+	transition: transition(all,0.5s);
 	transition-delay: 1s;
 	transform: translateY( -100% );
 
@@ -121,7 +121,7 @@ body{
 
 
 			@at-root .-is-navOpen .siteHeader__nav{
-				height: 100%;
+				height: 100vh;
 				top: 60px;
 				pointer-events: all;
 			}
