--- a/dev/src/scss/_style-top-form.scss
+++ b/dev/src/scss/_style-top-form.scss
@@ -106,58 +106,51 @@
             margin-top: 20px;
         }           
     }
-    #mfp_button_send,
-    #mfp_button_cancel{
+
+
+    .mfp_element_button{
+        background: none;
+        font-size: 1em;
+        box-sizing: border-box;
+        padding: 10px 20px;
         position: relative;
+        display: block;
+        border: 1px solid;
+        text-align: center;
 
-        @include mq( sp ){
-            margin-right: auto;
-            margin-left: auto;
-            margin-top: 50px;
-        }   
-
-        button{
-            background: none;
-            font-size: 1em;
+        &:before,
+        &:after{
+            content:" "; 
+            height: 1px;
+            margin-top: auto;
+            margin-bottom: auto;
+            position: absolute;
+            top: 0;
+            right: 10px;
+            bottom: 0;
+            background-color: currentColor;
+            transition: transition();
         }
-        
-        a,
-        button{
-            width: 100%;
-            box-sizing: border-box;
-            padding: 10px 20px;
-            position: relative;
-            display: block;
-            border: 1px solid;
-            text-align: center;
-        }        
+
+        &:before{
+            width: 25px;
+        }
+        &:after{
+            width: 10px;
+            transform-origin: right center;
+            transform: rotate( 30deg );
+        }
     }
+
     #mfp_button_send{
         width: 50%;
-        button{
+        color: #ffffff;
+        background-color: $navy;
+
             &:before,
             &:after{
-                content:" "; 
-                height: 1px;
-                margin-top: auto;
-                margin-bottom: auto;
-                position: absolute;
-                top: 0;
-                right: 10px;
-                bottom: 0;
-                background-color: currentColor;
-                transition: transition();
+                background-color: #fff;
             }
-
-            &:before{
-                width: 25px;
-            }
-            &:after{
-                width: 10px;
-                transform-origin: right center;
-                transform: rotate( 30deg );
-            }            
-        }
     }
 
     #mfp_button_cancel{
